# ecg-classification-system

./: .bandit.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTOMATED_TESTING_PLAN.md  CLAUDE.md  CLINICAL_PRESENTATION_SUMMARY.md  CLINICAL_TRAINING_DEPLOYMENT.md  CLINICAL_VALIDATION_DOCUMENTATION.md  CODE_OF_CONDUCT.md  COMPLETE_USER_FRIENDLY_LAUNCHER.bat  COMPREHENSIVE_LAUNCHER_GUIDE.md  CONTRIBUTING.md  Copy_of_ECGon715.ipynb  Create_Desktop_Shortcut.vbs  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DESKTOP_READY_SUMMARY.md  DESKTOP_SETUP_INSTRUCTIONS.md  DNP_BOARD_PRESENTATION.md  ECG_PROFESSIONAL_INSTALLER.bat  ECGon715.ipynb  ENHANCED_LAUNCHER.bat  FINAL_DEPLOYMENT_INSTRUCTIONS.md  INSTALL_DESKTOP_SHORTCUT.bat  LAUNCH_ECG_COMPREHENSIVE.bat  LAUNCH_ECG_SYSTEM.bat  LICENSE  PC_SETUP_AUTOMATION.bat  PHASE_A_COMPLETION_REPORT.md  PROFESSIONAL_FEATURES_SUMMARY.md  PROFESSIONAL_LAUNCHER.bat  PROFESSIONAL_STYLE_GUIDE.md  QUICK_LAUNCH.bat  README.md  README_PROFESSIONAL.md  SIMPLE_INSTALLER.bat  STANDALONE_LAUNCHER.bat  STREAMLINED_LAUNCHER.bat  (+77 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: check_data.py  check_phase3_results.py  enhanced_main.py  fix_pca.py  main.py  main.py.backup  minimal_main.py  simple_main.py  smart_launcher.py  test_phase2.py  user_friendly_main.py  user_friendly_main_fixed.py
app/components/: ai_explainability.py  batch_processor.py  classification.py  clinical_disclaimers.py  clinical_training.py  dnp_education_module.py  enhanced_explainability.py  performance_monitor.py
app/utils/: __init__.py  comprehensive_mapper.py  data_loader.py  dataset_manager.py  enhanced_mi_pipeline.py  fast_prediction_pipeline.py  laptop_optimized_loader.py  mi_database_loader.py  model_integration.py  optimized_dataset_loader.py  ptbxl_mi_extractor.py
config/: comprehensive_cardiac_config.py  feature_config.py  large_dataset_config.py  model_config.py  preprocessing_config.py  settings.py
data/results/features/: feature_analysis_report.json
docs/: DATASET_SETUP.md
models/: __init__.py
models/feature_extraction/: __init__.py  feature_extraction_pipeline.py  feature_extractor.py  feature_selection.py  frequency_features.py  mi_specific_features.py  st_segment_features.py  temporal_features.py  visualization.py  wavelet_features.py
models/preprocessing/: __init__.py  label_processor.py  preprocessing_pipeline.py  signal_filters.py  signal_normalizer.py  signal_processor.py  signal_quality.py
models/training/: __init__.py  base_trainer.py  enhanced_mi_trainer.py  model_evaluation.py  model_trainer.py  phase4_model_training.py  training_pipeline.py
notebooks/: phase1_foundation.ipynb  phase1_foundation.ipynp  phase2_preprocessing.ipynb  phase2_preprocessing.ipynp  phase3_feature_extraction.ipynb  phase4_notebook.ipynb  phase4_notebook.ipynp
scripts/: arrhythmia_integration.py  load_complete_datasets.py
src/: ecg_visualization.py  inference.py
